[package]
name = "veryl-discovery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow      = "1.0"
clap        = {version = "4.5.21", features = ["derive"]}
chrono      = {version = "0.4.38", features = ["serde"]}
http        = "1.1"
octocrab    = "0.41.2"
plotters    = "0.3.7"
reqwest     = {version = "0.12.9", features = ["json"]}
secrecy     = "0.10.3"
semver      = {version = "1.0", features = ["serde"]}
serde       = {version = "1.0", features = ["derive"]}
serde_json  = "1.0"
tokio       = {version = "1.41.1", features = ["full"]}
url         = "2.5"
walkdir     = "2.5"
which       = "7.0"
zip-extract = "0.2.1"
