[package]
name = "veryl-discovery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anstyle     = "1.0"
anyhow      = "1.0"
clap        = {version = "4.5.50", features = ["derive"]}
chrono      = {version = "0.4.42", features = ["serde"]}
http        = "1.3"
octocrab    = "0.47.0"
plotters    = "0.3.7"
reqwest     = {version = "0.12.9", features = ["json"]}
secrecy     = "0.10.3"
semver      = {version = "1.0", features = ["serde"]}
serde       = {version = "1.0", features = ["derive"]}
serde_json  = "1.0"
tokio       = {version = "1.48.0", features = ["full"]}
url         = "2.5"
walkdir     = "2.5"
which       = "8.0"
zip         = "6.0"
